[package]
name = "tcping"
description = "🛠️ tcping-rs: Rust (rs) TCP Ping (tcping) Utility for Port Reachability."
version = "1.2.24"
edition = "2024"
rust-version = "1.92"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
repository = "https://github.com/lvillis/tcping-rs"
homepage = "https://github.com/lvillis/tcping-rs"
documentation = "https://github.com/lvillis/tcping-rs/blob/main/README.md"
include = [
  "src/**",
  "tests/**",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "README.zh-CN.md",
  "LICENSE",
]

[dependencies]
clap = { version = "4.5.53", default-features = false, features = ["std", "color", "usage", "help", "suggestions", "error-context", "derive"] }
tokio = { version = "1.48.0", default-features = false, features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.146", default-features = false, features = ["std"] }
thiserror = "2.0.17"
anyhow = "1.0.100"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 1

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
