[package]
name = "tcping"
description = "🛠️ tcping-rs: Rust (rs) TCP Ping (tcping) Utility for Port Reachability."
version = "1.2.27"
edition = "2024"
rust-version = "1.95.0"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
repository = "https://github.com/lvillis/tcping-rs"
homepage = "https://github.com/lvillis/tcping-rs"
documentation = "https://github.com/lvillis/tcping-rs/blob/main/README.md"
include = [
  "src/**",
  "tests/**",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "README.zh-CN.md",
  "LICENSE",
]

[features]
default = ["cli"]
cli = ["serde", "dep:clap", "dep:serde_json", "tokio/signal"]
serde = ["dep:serde"]

[[bin]]
name = "tcping"
path = "src/bin/tcping/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.6.1", optional = true, default-features = false, features = ["std", "color", "usage", "help", "suggestions", "error-context", "derive"] }
tokio = { version = "1.52.1", default-features = false, features = ["rt-multi-thread", "macros", "net", "time"] }
serde = { version = "1.0.228", optional = true, default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", optional = true, default-features = false, features = ["std"] }
thiserror = { version = "2.0.18", default-features = false, features = ["std"] }
time = { version = "0.3.44", default-features = false, features = ["std", "formatting", "macros"] }

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 1

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
